- Moved event delegation to Spaz.Intercept.init() - Added calculation of # reqs/hour next to refresh interval pref UI - Search section now clears results only if search term is new since last search - Added info to About on "media sets used" (sound and emoticon sets) - Upgraded to newest jquery.intercept.js - Shortened some prefs UI labels to avoid overflow; reduced padding of Prefs panelset

--- a/themes/spaz/theme.css
+++ b/themes/spaz/theme.css
@@ -708,7 +708,7 @@ div.timeline-entry {
 #prefs-form {
 	font-size:11px;
 	margin:0px 10px;
-	padding:20px;
+	padding:10px;
 }
 
 	/*
@@ -752,6 +752,7 @@ div.timeline-entry {
 				border-bottom: 2px solid #D0D0D0;
 				clear:both;
 				background-color: #F0F0F0;
+				overflow: hidden;
 			}
 
 
@@ -819,12 +820,12 @@ div.timeline-entry {
 						A few specific pref "widgets" need special formatting
 					*/
 					input[type='text']#prefs-user-stylesheet {
-						width:100px;
+						width:80px;
 					}
-					input[type='text']#prefs-refresh-interval {
+					input[type='text']#network-refreshinterval {
 						width:20px;
 					}
-					input[type='text']#prefs-opacity-percentage {
+					input[type='text']#window-alpha {
 						width:30px;
 						text-align:right;
 					}
